# ParseOJT

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
parseojt/: __init__.py  characters.py  domain.py  e2e.py  gardener.py  main.py  ojt.py  parser.py
parseojt/graph/: __init__.py  converter.py
parseojt/ojt/: __init__.py  parser.py
parseojt/voicevox/: converter.py  domain.py
speechtree/: characters.py  e2e.py  gardener.py  tree.py  utils.py
speechtree/graph/: converter.py
speechtree/ojt/: domain.py  loader.py  parser.py
speechtree/voicevox/: __init__.py  converter.py
tests/: __init__.py  test_domain.py  test_gardener.py  test_main.py  test_ojt.py  test_parser.py  test_utils.py
tests/tests_e2e/: __init__.py  test_ojt_to_vv.py
tests/tests_ojt/: __init__.py  test_loader.py
