[project]
name = "parseojt"
version = "0.0.0"
description = "Parser of Open JTalk text-processing output, NJD features"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
    "pyopenjtalk>=0.4.1",
    "pytest>=8.3.5",
    "ruff>=0.11.12",
    "typos>=1.32.0",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "E501", # line-too-long
  "COM812", # missing-trailing-comma. Handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"test/**/test_*.py" = ["D103"] # undocumented-public-function. Because D103 force docstring on pytest target functions `test_*()` even if contents are apparent from name.

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
strict = true