[project]
name = "speechtree"
version = "0.0.0"
description = "Simple but rich tree-structure representing speech text"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.5",
]

[tool.uv.sources]
pyopenjtalk = { git = "https://github.com/VOICEVOX/pyopenjtalk", rev = "74703b034dd90a1f199f49bb70bf3b66b1728a86" } # synced with VOICEVOX ENGINE https://github.com/VOICEVOX/voicevox_engine/blob/master/pyproject.toml

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
    "pyopenjtalk",
    "pytest>=8.3.5",
    "ruff>=0.11.12",
    "typos>=1.32.0",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "E501", # line-too-long
  "D400", # missing-trailing-period。Not supporting Japanese period `。`.
  "D403", # first-word-uncapitalized。Not work consistently in Japanese.
  "COM812", # missing-trailing-comma. Handled by formatter.
  "S101", # assert. Assert is recommended in pytest.
]

[tool.ruff.lint.per-file-ignores]
"speechtree/tree.py" = [
  "RUF001", # ambiguous-unicode-character-string. Define containers for Japanese.
  "RUF002", # ambiguous-unicode-character-docstring. Define containers for Japanese.
  "RUF003", # ambiguous-unicode-character-comment. Define containers for Japanese.
]
"tests/**/test_*.py" = [
  "D103", # undocumented-public-function. Because D103 force docstring on pytest target functions `test_*()` even if contents are apparent from name.
  "RUF001", # ambiguous-unicode-character-string. Test Japanese strings.
  "RUF003", # ambiguous-unicode-character-comment. Test Japanese strings.
]
"tests/tests_e2e/test_ojt_to_vv.py" = [
  "ERA001", # commented-out-code. For external reference.
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
strict = true
